{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 962,
  "lineage": "0cc34586-f397-34d5-ac8d-c0f180e71cb9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "blog_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2eb4bb3c2d3c778",
            "arn": "arn:aws:ec2:us-east-1:083587468058:elastic-ip/eipalloc-0f2eb4bb3c2d3c778",
            "domain": "vpc",
            "id": "eipalloc-0f2eb4bb3c2d3c778",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-67-202-10-146.compute-1.amazonaws.com",
            "public_ip": "67.202.10.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-nat-eip-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog"
            },
            "tags_all": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-nat-eip-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.blog_igw",
            "aws_vpc.blog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "blog_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083587468058:internet-gateway/igw-0db237b610547ee98",
            "id": "igw-0db237b610547ee98",
            "owner_id": "083587468058",
            "tags": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-igw-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog"
            },
            "tags_all": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-igw-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog"
            },
            "vpc_id": "vpc-0b66ce46d56910450"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.blog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "blog_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083587468058:loadbalancer/app/nancy-blog-alb-dev/4d451a6ce428b8fa",
            "arn_suffix": "app/nancy-blog-alb-dev/4d451a6ce428b8fa",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nancy-blog-alb-dev-1636963560.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:083587468058:loadbalancer/app/nancy-blog-alb-dev/4d451a6ce428b8fa",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nancy-blog-alb-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05e65dcaeb2082af3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07e3d0546f33baacf"
              },
              {
                "subnet_id": "subnet-0e1769b61bdc61364"
              }
            ],
            "subnets": [
              "subnet-07e3d0546f33baacf",
              "subnet-0e1769b61bdc61364"
            ],
            "tags": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "nancy-blog-alb-dev",
              "OwnerEmail": "nancytcheby@hotmail.com"
            },
            "tags_all": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "nancy-blog-alb-dev",
              "OwnerEmail": "nancytcheby@hotmail.com"
            },
            "vpc_id": "vpc-0b66ce46d56910450",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.blog_sg",
            "aws_subnet.blog_public_subnet",
            "aws_vpc.blog_vpc",
            "data.aws_availability_zones.available",
            "data.aws_subnets.blog_public_subnets",
            "data.aws_vpc.blog_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "blog_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083587468058:listener/app/nancy-blog-alb-dev/4d451a6ce428b8fa/a78ca5555eba71f3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:083587468058:targetgroup/nancy-blog-tg-dev/e040a04f82fae705",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:083587468058:listener/app/nancy-blog-alb-dev/4d451a6ce428b8fa/a78ca5555eba71f3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:083587468058:loadbalancer/app/nancy-blog-alb-dev/4d451a6ce428b8fa",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.blog_alb",
            "aws_lb_target_group.blog_tg",
            "aws_security_group.blog_sg",
            "aws_subnet.blog_public_subnet",
            "aws_vpc.blog_vpc",
            "data.aws_availability_zones.available",
            "data.aws_subnets.blog_public_subnets",
            "data.aws_vpc.blog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blog_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083587468058:targetgroup/nancy-blog-tg-dev/e040a04f82fae705",
            "arn_suffix": "targetgroup/nancy-blog-tg-dev/e040a04f82fae705",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:083587468058:targetgroup/nancy-blog-tg-dev/e040a04f82fae705",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nancy-blog-tg-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "nancy-blog-tg-dev",
              "OwnerEmail": "nancytcheby@hotmail.com"
            },
            "tags_all": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "nancy-blog-tg-dev",
              "OwnerEmail": "nancytcheby@hotmail.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b66ce46d56910450"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.blog_vpc",
            "data.aws_vpc.blog_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "blog_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2eb4bb3c2d3c778",
            "association_id": "eipassoc-03f0991c5cfa954ab",
            "connectivity_type": "public",
            "id": "nat-004f88a476221c90f",
            "network_interface_id": "eni-0297c8ea710031d4d",
            "private_ip": "10.0.0.178",
            "public_ip": "67.202.10.146",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07e3d0546f33baacf",
            "tags": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-nat-gateway-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog"
            },
            "tags_all": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-nat-gateway-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.blog_nat_eip",
            "aws_internet_gateway.blog_igw",
            "aws_subnet.blog_public_subnet",
            "aws_vpc.blog_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "blog_public_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083587468058:network-acl/acl-056d06a085e453d23",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-056d06a085e453d23",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "083587468058",
            "subnet_ids": [
              "subnet-07e3d0546f33baacf",
              "subnet-0e1769b61bdc61364"
            ],
            "tags": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-public-nacl-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog"
            },
            "tags_all": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-public-nacl-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog"
            },
            "vpc_id": "vpc-0b66ce46d56910450"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.blog_public_subnet",
            "aws_vpc.blog_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "blog_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083587468058:route-table/rtb-0e6cab2b816a7167c",
            "id": "rtb-0e6cab2b816a7167c",
            "owner_id": "083587468058",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-004f88a476221c90f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-private-rt-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog",
              "Type": "Private"
            },
            "tags_all": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-private-rt-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b66ce46d56910450"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.blog_nat_eip",
            "aws_internet_gateway.blog_igw",
            "aws_nat_gateway.blog_nat",
            "aws_subnet.blog_public_subnet",
            "aws_vpc.blog_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "blog_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083587468058:route-table/rtb-001f270f45c1ae1f2",
            "id": "rtb-001f270f45c1ae1f2",
            "owner_id": "083587468058",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db237b610547ee98",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-public-rt-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog",
              "Type": "Public"
            },
            "tags_all": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-public-rt-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b66ce46d56910450"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.blog_igw",
            "aws_vpc.blog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "blog_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f0949b41fd0a8fb",
            "route_table_id": "rtb-0e6cab2b816a7167c",
            "subnet_id": "subnet-0d9c16d029d6a3d68"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.blog_nat_eip",
            "aws_internet_gateway.blog_igw",
            "aws_nat_gateway.blog_nat",
            "aws_route_table.blog_private_rt",
            "aws_subnet.blog_private_subnet",
            "aws_subnet.blog_public_subnet",
            "aws_vpc.blog_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094a3b1dd77eed20c",
            "route_table_id": "rtb-0e6cab2b816a7167c",
            "subnet_id": "subnet-028383b55cb27dbae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.blog_nat_eip",
            "aws_internet_gateway.blog_igw",
            "aws_nat_gateway.blog_nat",
            "aws_route_table.blog_private_rt",
            "aws_subnet.blog_private_subnet",
            "aws_subnet.blog_public_subnet",
            "aws_vpc.blog_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "blog_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e27f6726e04e6d45",
            "route_table_id": "rtb-001f270f45c1ae1f2",
            "subnet_id": "subnet-07e3d0546f33baacf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.blog_igw",
            "aws_route_table.blog_public_rt",
            "aws_subnet.blog_public_subnet",
            "aws_vpc.blog_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bce9a38a2752f64",
            "route_table_id": "rtb-001f270f45c1ae1f2",
            "subnet_id": "subnet-0e1769b61bdc61364"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.blog_igw",
            "aws_route_table.blog_public_rt",
            "aws_subnet.blog_public_subnet",
            "aws_vpc.blog_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "blog_efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083587468058:security-group/sg-0e13a219727114d97",
            "description": "SG for EFS mount targets for Nancy Blog",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e13a219727114d97",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow EC2 to mount EFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05e65dcaeb2082af3"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "nancy-blog-efs-sg-dev",
            "name_prefix": "",
            "owner_id": "083587468058",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "nancy-blog-efs-sg-dev"
            },
            "tags_all": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "nancy-blog-efs-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b66ce46d56910450"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.blog_sg",
            "aws_vpc.blog_vpc",
            "data.aws_vpc.blog_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "blog_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083587468058:security-group/sg-05e65dcaeb2082af3",
            "description": "SG for Nancy Blog EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e65dcaeb2082af3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nancy-blog-sg-dev",
            "name_prefix": "",
            "owner_id": "083587468058",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "nancy-blog-sg-dev"
            },
            "tags_all": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "nancy-blog-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b66ce46d56910450"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.blog_vpc",
            "data.aws_vpc.blog_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "blog_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083587468058:subnet/subnet-0d9c16d029d6a3d68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9c16d029d6a3d68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083587468058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-private-subnet-1-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog",
              "Type": "Private"
            },
            "tags_all": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-private-subnet-1-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog",
              "Type": "Private"
            },
            "vpc_id": "vpc-0b66ce46d56910450"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.blog_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083587468058:subnet/subnet-028383b55cb27dbae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028383b55cb27dbae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083587468058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-private-subnet-2-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog",
              "Type": "Private"
            },
            "tags_all": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-private-subnet-2-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog",
              "Type": "Private"
            },
            "vpc_id": "vpc-0b66ce46d56910450"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.blog_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "blog_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083587468058:subnet/subnet-07e3d0546f33baacf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e3d0546f33baacf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "083587468058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-public-subnet-1-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog",
              "Tier": "Public",
              "Type": "Public"
            },
            "tags_all": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-public-subnet-1-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog",
              "Tier": "Public",
              "Type": "Public"
            },
            "vpc_id": "vpc-0b66ce46d56910450"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.blog_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083587468058:subnet/subnet-0e1769b61bdc61364",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1769b61bdc61364",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "083587468058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-public-subnet-2-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog",
              "Tier": "Public",
              "Type": "Public"
            },
            "tags_all": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "blog-public-subnet-2-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog",
              "Tier": "Public",
              "Type": "Public"
            },
            "vpc_id": "vpc-0b66ce46d56910450"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.blog_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "blog_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083587468058:vpc/vpc-0b66ce46d56910450",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0faea0777d1afceda",
            "default_route_table_id": "rtb-020c40be8c0a9654d",
            "default_security_group_id": "sg-05139e71e233b7677",
            "dhcp_options_id": "dopt-08e98912fc46c72c9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b66ce46d56910450",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020c40be8c0a9654d",
            "owner_id": "083587468058",
            "tags": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "nancy-blog-vpc-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog"
            },
            "tags_all": {
              "Application": "nancy-blog",
              "Environment": "dev",
              "Name": "nancy-blog-vpc-dev",
              "OwnerEmail": "nancytcheby@hotmail.com",
              "Project": "nancy-blog"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}